# opendata-analytics-platform

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  config.example.yml  pyproject.toml
.github/workflows/: ci.yml
contracts/: schema_v1.yml
docs/: ROADMAP.md
sql/marts/: dim_customers.sql  dim_products.sql  fct_order_items.sql  fct_orders.sql
sql/metrics/: m_active_customers_daily.sql  m_aov_daily.sql  m_gmv_daily.sql  m_net_gmv_daily.sql  m_orders_daily.sql  m_retention_cohort.sql
sql/staging/: stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql
src/opendata_platform/: __init__.py  cli.py  config.py
src/opendata_platform/contracts/: __init__.py  validator.py
src/opendata_platform/dashboard/: app.py
src/opendata_platform/ingest/: download_open_data.py  generate_data.py  ingest.py
src/opendata_platform/metrics/: __init__.py  metric_runner.py
src/opendata_platform/quality/: __init__.py  dq_checks.py  report.py
src/opendata_platform/quality/checks/: __init__.py  freshness.py  null_rate.py  numeric_ranges.py  pk_uniqueness.py  referential_integrity.py  schema_existence.py
src/opendata_platform/transform/: run_sql.py
src/opendata_platform/warehouse/: __init__.py  build_db.py
tests/: test_metrics_discovery.py  test_pipeline_e2e.py  test_quality.py  test_quality_discovery.py
